v30.1 fix spacing in side bar

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -77,7 +77,7 @@ body {
 
 .nav-links a span,
 .nav-links button span {
-  opacity: 0;
+  opacity: 1;
   transition: opacity 0.3s ease;
 }
 
